--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     # Тут подключаем volume к backend
     volumes:
       - static:/backend_static
+    depends_on:
+      - db
   frontend:
     env_file: .env
     build: ./frontend/
@@ -31,3 +33,5 @@ services:
       - static:/staticfiles/
     ports:
       - 8000:80
+    depends_on:
+      - backend
