--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: bair90/taski_gateway  # Качаем с Docker Hub
+    image: bair90/taski_gateway 
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
